--- a/Signup.html
+++ b/Signup.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
+<script src="signvalid.js"></script>
 <link href='https://fonts.googleapis.com/css?family=David Libre' rel='stylesheet'>
 </head>
 <body>
@@ -20,27 +21,27 @@
   </div>
 
       <div  class="con" >
-    <form action="login.html" style="width: 700px;margin-left:350px;height:850px;padding-left:20px;padding-right:20px;margin-bottom:10px">
+    <form name="signup" action="login.html" style="width: 700px;margin-left:350px;height:850px;padding-left:20px;padding-right:20px;margin-bottom:10px" onsubmit="validate()">
     
            <h1 style="font-weight: 600;margin-top: 30px;" >SIGN UP</h1>
           <hr class="solid1">
           <label for="uname"  ><b>Name</b></label>
-          <input type="text" placeholder="Enter Name" name="uname" required>
+          <input type="text" placeholder="Enter Name" name="uname" >
           <br>
           <label for="email" ><b>E-mail</b></label>
-          <input type="email" placeholder="Enter E-Mail" name="email" required>
+          <input type="email" placeholder="Enter E-Mail" name="email" >
           <br>
           <label for="mobileno"  ><b>Mobile Number</b></label>
-          <input type="String" placeholder="Enter Mobile Number" name="mobileno" required>
+          <input type="String" placeholder="Enter Mobile Number" name="mobileno" >
           <br>
           <label for="psw" ><b>Password</b></label>
-          <input type="password" placeholder="Enter Password" name="psw" required>
+          <input type="password" placeholder="Enter Password" name="psw" >
           <br>
           <label for="conpsw" ><b>Confirm Password</b></label>
-          <input type="password" placeholder="Confirm Password" name="conpsw" required>
+          <input type="password" placeholder="Confirm Password" name="conpsw" >
           <br>
           <label for="accno"  ><b>Account Number</b></label>
-          <input type="String" placeholder="Enter Account Number" name="accno" required>
+          <input type="String" placeholder="Enter Account Number" name="accno">
           <br>
           <label for="bank" >Choose a bank</label>
           <select name="bank" id="bank"  style="width: 45%;
@@ -58,7 +59,7 @@
           <BR>
 
 
-      <button style="margin:20px 50px -80px 110px; " type="submit" >Sign Up</button>
+      <button type="submit" style="margin:20px 50px -80px 110px; "  >Sign Up</button>
           <br>
         </div>
       
