--- a/Transaction list.html
+++ b/Transaction list.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
 <link href='https://fonts.googleapis.com/css?family=David Libre' rel='stylesheet'>
+<link rel="stylesheet" href="utilbill.css">
+
 </head>
 <body>
   <div class="header">
@@ -19,22 +21,38 @@
     </div>
   </div>
 
-<table border="1">
-  <tr>
-    <th>Submission ID</th>
-    <th>Form ID</th>
-    <th>IP</th>
+<table name="Transaction" style="border-bottom: 1px solid; text-align:center; margin-top: 50px; width:50%;font-family: David Libre;font-size: 20px;" class="center" >
+  <tr style="height:50px;background-color: black;color:white;font-weight:200;font-family: David Libre;">
+    <th  >Customer Id</th>
     <th>Name</th>
-    <th>E-mail</th>
-    <th>Message</th>
+    <th>Transaction ID</th>
+    <th>Date</th>
+    <th>Status</th>
+    <th>Amount</th>
   </tr>
-  <tr>
-    <td>123456789</td>
-    <td>12345</td>
-    <td>123.555.789</td>
-    <td>John Johnny</td>
-    <td>johnny@example.com</td>
-    <td>This is the message John sent you</td>
+  <tr style="height:50px ;border-bottom: 1px solid;">
+    <td style ="color:black;font-family: DavidLibre;font-size: 16px;">123456789</td>
+    <td style ="color:black;font-family: DavidLibre;font-size: 16px;">John Doe</td>
+    <td style ="color:black;font-family: DavidLibre;font-size: 16px;">12324</td>
+    <td style ="color:black;font-family: DavidLibre;font-size: 16px;">17/11/2022</td>
+    <td style ="color:black;font-family: DavidLibre;font-size: 16px;">Credited</td>
+    <td style ="color:black;font-family: DavidLibre;font-size: 16px;">3000</td>
+  </tr>
+  <tr style="height:50px;border-bottom: 1px solid;">
+    <td style ="background-color:#cccccc;font-family: DavidLibre;font-size: 16px;">52425425</td>
+    <td style ="background-color:#cccccc;font-family: DavidLibre;font-size: 16px;">Doe John</td>
+    <td style ="background-color:#cccccc;font-family: DavidLibre;font-size: 16px;">1232324</td>
+    <td style ="background-color:#cccccc;font-family: DavidLibre;font-size: 16px;">20/11/2022</td>
+    <td style ="background-color:#cccccc;font-family: DavidLibre;font-size: 16px;">Debited</td>
+    <td style ="background-color:#cccccc;font-family: DavidLibre;font-size: 16px;">1950</td>
+  </tr>
+  <tr style="height:50px ;border-bottom: 1px solid;">
+    <td style ="color:black;font-family: DavidLibre;font-size: 16px;">123456789</td>
+    <td style ="color:black;font-family: DavidLibre;font-size: 16px;">John Doe</td>
+    <td style ="color:black;font-family: DavidLibre;font-size: 16px;">12324</td>
+    <td style ="color:black;font-family: DavidLibre;font-size: 16px;">17/11/2022</td>
+    <td style ="color:black;font-family: DavidLibre;font-size: 16px;">Credited</td>
+    <td style ="color:black;font-family: DavidLibre;font-size: 16px;">3000</td>
   </tr>
 </table>
 
