--- a/login.html
+++ b/login.html
@@ -3,6 +3,7 @@
 <title> Wallet app </title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+<script src="loginvalid.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
 <link href='https://fonts.googleapis.com/css?family=David Libre' rel='stylesheet'>
 </head>
@@ -26,23 +27,25 @@
   </div>
 </div>
 <div class="split right">
-  <form  style="width:500px;margin-left:50px;height:400px">
+  
+  <form  action="dashboard.html" name="login" style="width:500px;margin-left:50px;height:400px" onsubmit="validateTextBox()" >
     <div class="container">
       <h1 style="font-weight: 600;text-align: center;" >LOGIN</h1>
       <hr class="solid">
-      <label for="uname"style="margin-left:-15px;"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
+
+      <label for="uname" style="margin-left:-15px;" ><b>Username</b></label>
+      <input type="text" placeholder="Enter Username" name="uname" >
       <br>
   
       <label for="psw"style="margin-left:-15px;" ><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
+      <input type="password" placeholder="Enter Password" name="psw" >
       <br>
-      <button type="submit" style="margin-left:210px; margin-bottom: 20px;margin-top: 20px;" onclick="window.location='dashboard.html'">Login</button>
+      <button type="submit" style="margin-left:210px; margin-bottom: 20px;margin-top: 20px;" >Login</button>
       
     </div>
-    <div class="container" style="background-color:#f1f1f1 ;width:500px;height:50px" >
-      <label >
-        <input style type="checkbox" checked="checked" name="remember" > Remember me
+    <div class="container" style="background-color:#DBDBDB ;width:497px;height:50px" >
+      <label style="margin-left:-40px">
+        <input  type="checkbox" checked="checked" name="remember" > Remember me
       </label>
       
       <span class="psw">Forgot <a href="#">password?</a></span>
