--- a/Signup.html
+++ b/Signup.html
@@ -21,7 +21,7 @@
   </div>
 
       <div  class="con" >
-    <form name="signup" action="login.html" style="width: 700px;margin-left:350px;height:850px;padding-left:20px;padding-right:20px;margin-bottom:10px" onsubmit="validate()">
+    <form name="signup"  style="width:700px;margin-left:350px;height:850px;padding-left:20px;padding-right:20px;margin-bottom:10px" onsubmit="validate()">
     
            <h1 style="font-weight: 600;margin-top: 30px;" >SIGN UP</h1>
           <hr class="solid1">
@@ -59,7 +59,7 @@
           <BR>
 
 
-      <button type="submit" style="margin:20px 50px -80px 110px; "  >Sign Up</button>
+      <button type="submit" style="margin:20px 50px -80px 110px;" onclick="validate()" >Sign Up</button>
           <br>
         </div>
       
