--- a/Transaction list.html
+++ b/Transaction list.html
@@ -21,7 +21,9 @@
     </div>
   </div>
 
-<table name="Transaction" style="border-bottom: 1px solid; text-align:center; margin-top: 50px; width:50%;font-family: David Libre;font-size: 20px;" class="center" >
+   <h2 style="color:black;font-family:DavidLibre;font-size: 36px;margin-top:50px;margin-bottom:20px;text-align: center;font-weight:900;">Transaction List</h2>
+   <hr class="solid" style="width: 10%;margin-left:730px;margin-bottom: 70px;">
+<table name="Transaction" style="border-bottom: 1px solid; text-align:center; margin-top: 50px; width:60%;font-family: David Libre;font-size: 20px;" class="center" >
   <tr style="height:50px;background-color: black;color:white;font-weight:200;font-family: David Libre;">
     <th  >Customer Id</th>
     <th>Name</th>
